--- a/templates/mines.html
+++ b/templates/mines.html
@@ -699,7 +699,7 @@ function setMaxBet() {
                                         headers: { 'Content-Type': 'application/json' },
                                         credentials: 'include',
                                     });
-                                    const data = await response.json();
+                                    const data = response.json();
                                     const currentAmount = data.amount;         
                                     const amountAfterNextTile = data.amountafter;  
                                     const multiplier = data.multiplier;  
@@ -934,6 +934,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
