--- a/templates/home.html
+++ b/templates/home.html
@@ -210,11 +210,11 @@
     <div class="cards">
         <div class="card">
        <!--     <img src="https://example.com/towers-image.jpg" alt="Towers Game Image"> -->
-            <h3>Towers</h3>
-            <p>
-                Towers is a fast-paced risk-and-reward game where every move matters. Climb higher by choosing safe blocks while avoiding hidden traps that can end your run instantly. Each successful step increases your multiplier, but the higher you go, the greater the risk. Cash out at any time to secure your winnings, or push your luck and aim for the top. Simple to play, thrilling to master—Towers rewards sharp instincts and smart timing.
-            </p>
-            <a href="/towers">Open →</a>
+          <!--  <h3>Towers</h3>-->
+           <!-- <p> -->
+           <!--     Towers is a fast-paced risk-and-reward game where every move matters. Climb higher by choosing safe blocks while avoiding hidden traps that can end your run instantly. Each successful step increases your multiplier, but the higher you go, the greater the risk. Cash out at any time to secure your winnings, or push your luck and aim for the top. Simple to play, thrilling to master—Towers rewards sharp instincts and smart timing. -->
+          <!--  </p> -->
+           <!--   <a href="/towers">Open →</a> -->
         </div>
 
         <div class="card">
