--- a/templates/mines.html
+++ b/templates/mines.html
@@ -606,11 +606,7 @@ function setMaxBet() {
                             window.location.href = response.url;
                         }
 
-                        document.getElementById('multiplier').textContent = "1x";
-                        document.getElementById('currentAmount').textContent = "0";
-                        document.getElementById('amountAfter').textContent = "0";
-                        playBtn.style.backgroundColor = '';
-                        playBtn.textContent = 'Play Mines';
+                         window.location.href = '/mines'
                     } catch (err) {
                         console.error('Error starting Mines:', err);
                         alert('Failed to start Mines. Please try again.');
@@ -945,6 +941,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
