--- a/templates/mines.html
+++ b/templates/mines.html
@@ -606,6 +606,8 @@ function setMaxBet() {
                             window.location.href = response.url;
                         }
 
+                        window.location.href = '/mines'
+
                     } catch (err) {
                         console.error('Error starting Mines:', err);
                         alert('Failed to start Mines. Please try again.');
@@ -940,6 +942,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
