--- a/templates/mines.html
+++ b/templates/mines.html
@@ -783,7 +783,7 @@ function setMaxBet() {
     
             async function getData() {
                 try {
-                    const response = await fetch('https://arcadehavengambling.vercel.app/getbalance');
+                    const response = await fetch('/getbalance');
                     if (!response.ok) {
                         throw new Error('Network response was not ok');
                     }
@@ -942,6 +942,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
