--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AH Gambling</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <head>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=1">
+
+    <link rel="icon" type="image/png" href="/favicon.png?v=1" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon.png?v=1" sizes="16x16">
+
+    <link rel="shortcut icon" href="/favicon.ico?v=1" type="image/x-icon">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1">
+</head>
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
