--- a/templates/home.html
+++ b/templates/home.html
@@ -549,7 +549,7 @@
 
         async function getData() {
             try {
-                const response = await fetch('https://arcadehavengambling.vercel.app/getbalance');
+                const response = await fetch('/getbalance');
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
                 }
