--- a/templates/mines.html
+++ b/templates/mines.html
@@ -606,7 +606,53 @@ function setMaxBet() {
                             window.location.href = response.url;
                         }
 
-                        window.location.href = '/mines'
+                        if (result.ismine && Array.isArray(mines)) {
+                            document.querySelectorAll('.cell').forEach(cellEl => {
+                                const index = Number(cellEl.dataset.index);
+                        
+                                if (mines.includes(index)) {
+                                    cellEl.classList.add('mine');
+                                } else if (!cellEl.classList.contains('clicked')) {
+                                    cellEl.classList.add('reveal');
+                                }
+                            });
+                        }
+
+                    async function getData() {
+                        try {
+                            const response = await fetch('/getbalance');
+                            if (!response.ok) {
+                                throw new Error('Network response was not ok');
+                            }
+                                const data = await response.text(); 
+                                const number = parseFloat(data);
+                        
+                                if (isNaN(number)) {
+                                    console.error('Error: The response is not a valid number');
+                                    return "Something went wrong!";
+                                }
+            
+                                return number
+                        } catch (error) {
+                            console.error('There was a problem with the fetch operation:', error);
+                        }
+                    }
+            
+                    function formatWithCommas(num) {
+                        return num.toLocaleString();
+                    }
+            
+                    async function updateBalance() {
+                        let balance = await getData();
+                        if (typeof balance === 'number') {
+                            balance = balance.toLocaleString(); 
+                            document.querySelector('.balance-btn').textContent = `$${balance}`;
+                        } else {
+                            document.querySelector('.balance-btn').textContent = "Error loading balance";
+                        }
+                    }
+
+                    updateBalance();
 
                     } catch (err) {
                         console.error('Error starting Mines:', err);
@@ -962,6 +1008,7 @@ function setMaxBet() {
     </script>
 </body>
 </html>
+
 
 
 
